@@ -67,6 +67,7 @@ import com.yugabyte.yw.models.filters.MetricFilter;
 import com.yugabyte.yw.models.helpers.CommonUtils;
 import com.yugabyte.yw.models.helpers.NodeDetails;
 import com.yugabyte.yw.models.helpers.PlatformMetrics;
+import jakarta.mail.MessagingException;
 import java.io.IOException;
 import java.io.InputStream;
 import java.nio.charset.StandardCharsets;
@@ -95,7 +96,6 @@ import java.util.concurrent.ExecutorService;
 import java.util.concurrent.ThreadFactory;
 import java.util.function.Function;
 import java.util.stream.Collectors;
-import javax.mail.MessagingException;
 import lombok.AllArgsConstructor;
 import lombok.Data;
 import lombok.EqualsAndHashCode;
@@ -700,6 +700,7 @@ public class HealthChecker {
             new NodeInfo()
                 .setNodeHost(nodeDetails.cloudInfo.private_ip)
                 .setNodeName(nodeDetails.nodeName)
+                .setNodeUuid(nodeDetails.nodeUuid)
                 .setNodeIdentifier(
                     nodeInstance != null ? nodeInstance.getDetails().instanceName : "")
                 .setYbSoftwareVersion(userIntent.ybSoftwareVersion)
@@ -975,8 +976,8 @@ public class HealthChecker {
       // they are added.
       Path path =
           fileHelperService.createTempFile(
-              "collect_metrics_" + universeUuid + "_" + nodeInfo.nodeName, ".sh");
-      Files.write(path, scriptContent.getBytes(StandardCharsets.UTF_8));
+              "collect_metrics_" + universeUuid + "_" + nodeInfo.nodeUuid, ".sh");
+      Files.writeString(path, scriptContent);
 
       return path.toString();
     } catch (IOException e) {
@@ -997,8 +998,8 @@ public class HealthChecker {
       // they are added.
       Path path =
           fileHelperService.createTempFile(
-              "node_health_" + universeUuid + "_" + nodeInfo.nodeName, ".py");
-      Files.write(path, scriptContent.getBytes(StandardCharsets.UTF_8));
+              "node_health_" + universeUuid + "_" + nodeInfo.nodeUuid, ".py");
+      Files.writeString(path, scriptContent);
 
       return path.toString();
     } catch (IOException e) {
@@ -1054,6 +1055,7 @@ public class HealthChecker {
     private String ybcDir = "";
     private String nodeHost;
     private String nodeName;
+    private UUID nodeUuid;
     private String nodeIdentifier = "";
     private String ybSoftwareVersion = null;
     private boolean enableTls = false;
